refactor: [STEP12-개선] RedissonConfig.java 코드 리팩토링